--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,20 @@
 name = "CanadianClimateData"
 uuid = "4ac68c5e-d36a-4901-8cb5-da7e3d304538"
 authors = ["Gabriel Gobeil", "Jonathan Jalbert"]
-version = "1.0.0-DEV"
+version = "0.1.0"
+
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
-julia = "1.6.7"
+CSV = "^0.10"
+DataFrames = "^1"
+Downloads = "^1.6"
+ProgressMeter = "^1"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
