--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,9 @@ on:
       - main
     tags: ['*']
   pull_request:
+    branches:
+      - main
+      - dev
   workflow_dispatch:
 concurrency:
   # Skip intermediate builds: always.
