--- a/Project.toml
+++ b/Project.toml
@@ -6,13 +6,17 @@ version = "0.1.0"
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
 CSV = "^0.10"
 DataFrames = "^1"
+Dates = "1.11.0"
 Downloads = "^1.6"
+NCDatasets = "0.14.8"
 ProgressMeter = "^1"
 julia = "1"
 
