update dependency and compat

--- a/Project.toml
+++ b/Project.toml
@@ -14,9 +14,8 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 [compat]
 CSV = "^0.10"
 DataFrames = "^1"
-Dates = "1.11.0"
 Downloads = "^1.6"
-NCDatasets = "0.14.8"
+NCDatasets = "^0.14"
 ProgressMeter = "^1"
 julia = "1"
 
